--- a/ExViewer/Views/CachePage.xaml
+++ b/ExViewer/Views/CachePage.xaml
@@ -6,7 +6,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       NavigationCacheMode="Enabled"
       x:Name="page"
-      mc:Ignorable="d">
+      mc:Ignorable="d"
+      xmlns:pr="using:PullToRefresh.UWP">
     <Page.Transitions>
         <TransitionCollection>
             <NavigationThemeTransition>
@@ -46,64 +47,141 @@
                               Label="Clear cache" />
             </CommandBar.SecondaryCommands>
         </CommandBar>
-        <ListView x:Name="lv"
-                  ItemsSource="{x:Bind VM.CachedGalleries, Mode=OneWay}"
-                  IsItemClickEnabled="True"
-                  CanDragItems="True"
-                  SelectionMode="None"
-                  DragItemsStarting="lv_DragItemsStarting"
-                  ItemClick="lv_ItemClick"
-                  RelativePanel.AlignBottomWithPanel="True"
-                  RelativePanel.AlignLeftWithPanel="True"
-                  RelativePanel.AlignRightWithPanel="True"
-                  RelativePanel.Below="cb_top"
-                  VerticalAlignment="Top">
-            <ListView.ItemTemplate>
-                <DataTemplate xmlns:c="using:ExClient"
-                              xmlns:controls="using:ExViewer.Controls"
-                              x:DataType="c:Gallery">
-                    <controls:GalleryViewer x:Name="gv_Gallery"
-                                            Gallery="{x:Bind}"
-                                            RightTapped="gv_Gallery_RightTapped"
-                                            Holding="gv_Gallery_Holding"
-                                            Background="Transparent">
-                        <FlyoutBase.AttachedFlyout>
-                            <MenuFlyout>
-                                <MenuFlyoutItem x:Name="mfi_DeleteGallery"
-                                                Text="Delete"
-                                                Command="{Binding VM.Delete, ElementName=page}"
-                                                CommandParameter="{x:Bind}" />
-                                <MenuFlyoutItem x:Name="mfi_SaveTo"
-                                                Text="Save to..."
-                                                Command="{Binding VM.SaveTo, ElementName=page}"
-                                                CommandParameter="{x:Bind}" />
-                            </MenuFlyout>
-                        </FlyoutBase.AttachedFlyout>
-                    </controls:GalleryViewer>
+        <pr:PullToRefreshBox RelativePanel.AlignBottomWithPanel="True"
+                             RelativePanel.AlignLeftWithPanel="True"
+                             RelativePanel.AlignRightWithPanel="True"
+                             RelativePanel.Below="cb_top"
+                             RefreshInvoked="PullToRefreshBox_RefreshInvoked"
+                             RefreshThreshold="60">
+            <pr:PullToRefreshBox.TopIndicatorTemplate>
+                <DataTemplate>
+                    <pr:PullRefreshProgressControl Progress="{Binding}"
+                                                   Height="80"
+                                                   Width="200"
+                                                   PullToRefreshText="Pull to refresh"
+                                                   ReleaseToRefreshText="Release to refresh">
+                        <pr:PullRefreshProgressControl.Template>
+                            <ControlTemplate TargetType="pr:PullRefreshProgressControl">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition />
+                                        <RowDefinition Height="Auto" />
+                                    </Grid.RowDefinitions>
+                                    <VisualStateManager.VisualStateGroups>
+                                        <VisualStateGroup x:Name="VisualStateGroup">
+                                            <VisualState x:Name="Normal" />
+                                            <VisualState x:Name="ReleaseToRefresh">
+                                                <Storyboard>
+                                                    <DoubleAnimation Storyboard.TargetName="txt"
+                                                                     Storyboard.TargetProperty="Opacity"
+                                                                     To="0"
+                                                                     Duration="0"
+                                                                     BeginTime="0:0:0.05">
+                                                    </DoubleAnimation>
+                                                    <DoubleAnimation Storyboard.TargetName="txt2"
+                                                                     Storyboard.TargetProperty="Opacity"
+                                                                     To="1"
+                                                                     Duration="0"
+                                                                     BeginTime="0:0:0.05">
+                                                    </DoubleAnimation>
+                                                    <DoubleAnimation Storyboard.TargetName="rect"
+                                                                     Storyboard.TargetProperty="Opacity"
+                                                                     To="1"
+                                                                     Duration="0:0:0.1">
+                                                        <DoubleAnimation.EasingFunction>
+                                                            <QuadraticEase EasingMode="EaseIn" />
+                                                        </DoubleAnimation.EasingFunction>
+                                                    </DoubleAnimation>
+                                                </Storyboard>
+                                            </VisualState>
+                                        </VisualStateGroup>
+                                    </VisualStateManager.VisualStateGroups>
+                                    <TextBlock x:Name="txt"
+                                               Text="{TemplateBinding PullToRefreshText}"
+                                               HorizontalAlignment="Center"
+                                               VerticalAlignment="Bottom" />
+                                    <TextBlock x:Name="txt2"
+                                               Text="{TemplateBinding ReleaseToRefreshText}"
+                                               HorizontalAlignment="Center"
+                                               VerticalAlignment="Bottom"
+                                               Opacity="0" />
+                                    <Rectangle x:Name="rect"
+                                               StrokeThickness="0"
+                                               Width="200"
+                                               Height="4"
+                                               Fill="{StaticResource SystemControlForegroundAccentBrush}"
+                                               Margin="4"
+                                               Opacity="0.5"
+                                               VerticalAlignment="Bottom"
+                                               RenderTransformOrigin="0.5,0.5"
+                                               Grid.Row="1">
+                                        <Rectangle.RenderTransform>
+                                            <TransformGroup>
+                                                <ScaleTransform ScaleX="{Binding}" />
+                                            </TransformGroup>
+                                        </Rectangle.RenderTransform>
+                                    </Rectangle>
+                                </Grid>
+                            </ControlTemplate>
+                        </pr:PullRefreshProgressControl.Template>
+                    </pr:PullRefreshProgressControl>
                 </DataTemplate>
-            </ListView.ItemTemplate>
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="HorizontalContentAlignment"
-                            Value="Stretch" />
-                    <Setter Property="VerticalContentAlignment"
-                            Value="Stretch" />
-                    <Setter Property="Padding"
-                            Value="0" />
-                </Style>
-            </ListView.ItemContainerStyle>
-            <ListView.Footer>
-                <TextBlock HorizontalAlignment="Center"
-                           Margin="12"
-                           Style="{StaticResource BaseTextBlockStyle}"
-                           Visibility="{x:Bind VM.CachedGalleries.HasMoreItems, FallbackValue=Visible, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}">Loading more galleries...</TextBlock>
-            </ListView.Footer>
-        </ListView>
-        <TextBlock x:Name="tb_Empty"
-                   Margin="12"
-                   Style="{StaticResource BaseTextBlockStyle}"
-                   Visibility="{x:Bind VM.CachedGalleries.Count, Mode=OneWay, Converter={StaticResource ZeroToVisibleConverter}, FallbackValue=Collapsed}"
-                   RelativePanel.Below="cb_top"
-                   RelativePanel.AlignHorizontalCenterWithPanel="True">No cached galleries</TextBlock>
+            </pr:PullToRefreshBox.TopIndicatorTemplate>
+            <ListView x:Name="lv"
+                      ItemsSource="{x:Bind VM.CachedGalleries, Mode=OneWay}"
+                      IsItemClickEnabled="True"
+                      CanDragItems="True"
+                      SelectionMode="None"
+                      DragItemsStarting="lv_DragItemsStarting"
+                      ItemClick="lv_ItemClick"
+                      VerticalAlignment="Top">
+                <ListView.ItemTemplate>
+                    <DataTemplate xmlns:c="using:ExClient"
+                                  xmlns:controls="using:ExViewer.Controls"
+                                  x:DataType="c:Gallery">
+                        <controls:GalleryViewer x:Name="gv_Gallery"
+                                                Gallery="{x:Bind}"
+                                                RightTapped="gv_Gallery_RightTapped"
+                                                Holding="gv_Gallery_Holding"
+                                                Background="Transparent">
+                            <FlyoutBase.AttachedFlyout>
+                                <MenuFlyout>
+                                    <MenuFlyoutItem x:Name="mfi_DeleteGallery"
+                                                    Text="Delete"
+                                                    Command="{Binding VM.Delete, ElementName=page}"
+                                                    CommandParameter="{x:Bind}" />
+                                    <MenuFlyoutItem x:Name="mfi_SaveTo"
+                                                    Text="Save to..."
+                                                    Command="{Binding VM.SaveTo, ElementName=page}"
+                                                    CommandParameter="{x:Bind}" />
+                                </MenuFlyout>
+                            </FlyoutBase.AttachedFlyout>
+                        </controls:GalleryViewer>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="HorizontalContentAlignment"
+                                Value="Stretch" />
+                        <Setter Property="VerticalContentAlignment"
+                                Value="Stretch" />
+                        <Setter Property="Padding"
+                                Value="0" />
+                    </Style>
+                </ListView.ItemContainerStyle>
+                <ListView.Footer>
+                    <TextBlock HorizontalAlignment="Center"
+                               Margin="12"
+                               Style="{StaticResource BaseTextBlockStyle}"
+                               Visibility="{x:Bind VM.CachedGalleries.HasMoreItems, FallbackValue=Visible, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}">Loading more galleries...</TextBlock>
+                </ListView.Footer>
+                <ListView.Header>
+                    <TextBlock HorizontalAlignment="Center"
+                               Margin="12"
+                               Style="{StaticResource BaseTextBlockStyle}"
+                               Visibility="{x:Bind VM.CachedGalleries.Count, Mode=OneWay, Converter={StaticResource ZeroToVisibleConverter}, FallbackValue=Collapsed}">No cached galleries</TextBlock>
+                </ListView.Header>
+            </ListView>
+        </pr:PullToRefreshBox>
     </RelativePanel>
 </Page>
